Fixed inconsistent image sizing on mobile.

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -60,6 +60,11 @@
         border-radius: var(--border-radius);
         box-shadow: var(--background-shadow);
         transition: all 250ms;
+        object-fit: cover;
+
+        @media only screen and (max-width: 768px) {
+            max-width: 90%;
+        }
 
         &:hover {
             transform: scale(1.05);
